--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,2 +1,14 @@
+@import url('./__lang-links/header__lang-links.css');
 @import url('./__lang-link/header__lang-link.css');
+@import url('./__lang-link/_active/header__lang-link_active.css');
 @import url('./__logo/header__logo.css');
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 28px 48px 0 48px;
+  margin: 0 auto;
+  width: 100%;
+  box-sizing: border-box;
+}
