--- a/pages/index.css
+++ b/pages/index.css
@@ -8,3 +8,4 @@
 @import url('../blocks/intro/intro.css');
 @import url('../blocks/lead/lead.css');
 @import url('../blocks/header/header.css');
+@import url('../blocks/page/page.css');
