Finished lead and intro

--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,4 +5,7 @@
   font-size: 96px;
   line-height: 100px;
   text-align: center;
+  color: white;
+  margin: 56px auto 0 auto;
+  max-width: 720px;
 }
