--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,3 +1,10 @@
 @import url('./__list/intro__list.css');
 @import url('./__text/intro__text.css');
 @import url('./__title/intro__title.css');
+@import url('./__list/_type/intro__list_type_number.css');
+
+.intro {
+  max-width: 690px;
+  width: 100%;
+  margin: 114px auto 0 148px;
+}
