--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,1 +1,10 @@
 @import url('./__item/photo-grid__item.css');
+.photo-grid {
+  max-width: 1184px;
+  min-height: 671px;
+  width: 100%;
+  margin: 92px auto 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 16px;
+}
