--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -4,3 +4,15 @@
 @import url('./__title/place__title.css');
 @import url('./__url-heading/place__url-heading.css');
 @import url('./__website/place__website.css');
+
+.place {
+  display: grid;
+  grid-template-columns: 460px 484px;
+  grid-column-gap: 40px;
+  grid-row-gap: 48px;
+  margin: 0 auto;
+}
+
+.place:nth-child(n+2) {
+  margin-top: 80px;
+}
