--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,4 +1,9 @@
-@import url('__background/cover_background.css');
-@import url('__overlay/cover__overlay.css');
+@import url('__background/cover__background.css');
 @import url('__subtitle/cover__subtitle.css');
 @import url('__title/cover__title.css');
+
+.cover {
+  max-width: 1184px;
+  width: 100%;
+  margin: 80px auto 0 auto;
+}
