--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,7 @@
 @import url('./__image/place__image.css');
 @import url('./__link/place__link.css');
 @import url('./__paragraph/place__paragraph.css');
+@import url('./__paragraphs/place__paragraphs.css');
 @import url('./__title/place__title.css');
 @import url('./__url-heading/place__url-heading.css');
 @import url('./__website/place__website.css');
