--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,5 +1,9 @@
 .cover__background {
   background-image: linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover__background.png);
+  background-image: -webkit-linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover__background.png);
+	background-image: -moz-linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover__background.png);
+	background-image: -o-linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover__background.png);
+	background-image: -ms-linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover__background.png);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,4 +18,8 @@
 
 .cover__background:hover {
   background-image: linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
+  background-image: -webkit-linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
+  background-image: -moz-linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
+  background-image: -o-linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
+  background-image: -ms-linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
 }
