--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,2 +1,13 @@
 @import url('./__copyright/footer__copyright.css');
 @import url('./__link/footer__link.css');
+@import url('./__links/footer__links.css');
+@import url('./__list/footer__list.css');
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1184px;
+  margin: 92px auto 24px auto;
+}
