--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,5 +5,25 @@
 .cover {
   max-width: 1184px;
   width: 100%;
-  margin: 80px auto 0 auto;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+
+@media screen and (max-width: 1024px) {
+  .cover__background {
+  max-width: 1024px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__background {
+  max-width: 768px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__background {
+  max-width: 320px;
+  }
 }
