--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,4 +5,28 @@
 
 .lead {
   width: 100%;
+  max-width: 984px;
+  margin: 0 auto;
+  padding-bottom: 92px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead {
+  max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead {
+  max-width: 768px;
+  padding-bottom: 88px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead {
+  max-width: 320px;
+  padding-bottom: 64px;
+  }
 }
