--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,3 +1,16 @@
 .place__paragraphs {
 
 }
+
+@media screen and (max-width: 768px) {
+  .place__paragraphs {
+  padding-right: 16px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .place__paragraphs {
+  padding: 0 16px;
+  }
+}
+
