--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -9,10 +9,9 @@
   justify-content: center;
   align-items: center;
   min-height: 740px;
-  max-width: 1184px;
   width: 100%;
-  height: 100%;
-  background-position: center;
+  background-position: center center;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
@@ -22,4 +21,28 @@
   background-image: -moz-linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
   background-image: -o-linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
   background-image: -ms-linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
+}
+
+@media screen and (max-width: 1024px) {
+  .cover__background {
+  min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__background {
+  min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .cover__background {
+  min-height: 300px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .cover__background {
+  min-height: 200px;
+  }
 }
