--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -8,5 +8,12 @@
   color: white;
   max-width: 560px;
   margin: 0 auto;
-  z-index: 1;
+}
+
+@media screen and (max-width: 375px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 109%;
+    padding: 33px 16px 0 16px;
+  }
 }
