--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,3 +8,21 @@
   color: white;
   margin: 0;
 }
+
+@media screen and (max-width: 720px) {
+  .footer__copyright {
+    margin-top: 48px;
+    line-height: 100%;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .footer__copyright {
+    margin-top: 48px;
+    line-height: 100%;
+    text-align: left;
+  }
+}
+
+
