--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,7 +7,38 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
   width: 100%;
   max-width: 1184px;
-  margin: 92px auto 24px auto;
+  margin: 0 auto;
+  padding: 92px 48px 24px 48px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 1024px) {
+  .footer {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    max-width: 720px;
+    padding: 90px 24px 24px 24px;
+  }
+}
+
+@media screen and (max-width: 705px) {
+  .footer {
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .footer {
+    max-width: 186px;
+    padding: 64px 0 24px 16px;
+    display: block;
+  }
 }
