--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,3 +1,9 @@
 .header__lang-links {
-  margin: 0;
+  padding-top: 18px;
+}
+
+@media screen and (max-width: 768px) {
+  .header__lang-links {
+    padding-top: 18px;
+  }
 }
