--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,8 +1,15 @@
 .intro__text {
-  font-family: Inter;
+  font-family: 'Inter';
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 26px;
   color: white;
+}
+
+@media screen and (max-width: 375px) {
+  .intro__text {
+    font-size: 16px;
+    line-height: 162%;
+  }
 }
