--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,8 +1,16 @@
 .intro__title {
-  font-family: Inter;
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
-  line-height: 58px;
+  line-height: 107%;
   color: white;
+  margin: 0;
+}
+
+@media screen and (max-width: 375px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 109%;
+  }
 }
