--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,5 +6,30 @@
 .intro {
   max-width: 690px;
   width: 100%;
-  margin: 114px auto 0 148px;
+  margin: 0;
+  padding: 0 0 92px 148px;
+  box-sizing: border-box;
 }
+
+@media screen and (max-width: 1024px) {
+  .intro {
+    max-width: 720px;
+    padding: 0 0 92px 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .intro {
+    max-width: 720px;
+    padding: 0 24px 88px 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro {
+    max-width: 288px;
+    padding: 0 16px 64px 16px;
+  }
+}
+
+
