--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,7 +1,6 @@
 .lead__image {
-  background-image: url(../../../images/lead__image.png);
   width: 100%;
-  max-width: 984px;
-  min-height: 615px;
-  margin: 64px auto 0 auto;
+  height: auto;
+  margin: 0 auto 8px auto;
+  object-fit: contain;
 }
