--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,9 +3,33 @@
   font-style: normal;
   font-weight: normal;
   font-size: 30px;
-  line-height: 36px;
+  line-height: 120%;
   text-align: center;
-  max-width: 640px;
-  margin: 32px auto 0 auto;
+  margin: 0 auto 64px auto;
   color: white;
+  width: 100%;
+  box-sizing: border-box;
+  max-width: 640px;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__subtitle {
+    margin: 0 auto 56px auto;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead__subtitle {
+    margin: 0 auto 56px auto;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .lead__subtitle {
+  font-size: 16px;
+  line-height: 125%;
+  margin: 0 auto 40px auto;
+  padding: 0 16px;
+  max-width: 288px;
+  }
 }
