--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,11 +1,27 @@
 .lead__title {
-  font-family: Inter;
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
   font-size: 96px;
-  line-height: 100px;
+  line-height: 104px;
   text-align: center;
   color: white;
-  margin: 56px auto 0 auto;
-  max-width: 720px;
+  margin: 0 auto 32px auto;
+  width: 100%;
+  box-sizing: border-box;
 }
+
+@media screen and (max-width: 768px) {
+  .lead__title {
+  padding: 0 24px 0 24px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .lead__title {
+  font-size: 40px;
+  line-height: 110%;
+  padding: 0 16px 0 16px;
+  }
+}
+
