--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,5 +2,41 @@
     background-color: #2A2C2F;
     font-family: 'Inter', sans-serif;
     max-width: 1280px;
+    width: 100%;
     margin: 0 auto;
+    word-wrap: break-word;
+    text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: antialiased;
+}
+
+@media screen and (max-width: 1024px) {
+  .page {
+  max-width: 1024px;
+  width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .page {
+  max-width: 768px;
+  width: 100%;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .page {
+  max-width: 375px;
+  width: 100%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .page {
+  max-width: 320px;
+  width: 100%;
+  }
 }
