--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,10 +1,36 @@
 @import url('./__item/photo-grid__item.css');
 .photo-grid {
-  max-width: 1184px;
-  min-height: 671px;
-  width: 100%;
-  margin: 92px auto 0 auto;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   grid-gap: 16px;
+  padding: 0 48px 92px 48px;
+  max-width: 1280px;
+}
+
+@media screen and (max-width: 1024px) {
+  .photo-grid {
+  grid-gap: 14px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+  padding: 0 24px 88px 24px;
+  grid-gap: 16px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .photo-grid {
+  grid-gap: 12px;
+  padding: 0 16px 64px 16px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid {
+  grid-gap: 12px;
+  padding: 0 16px 64px 16px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
 }
