--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,10 +3,23 @@
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
+  line-height: 106%;
   color: white;
-  max-width: 460px;
-  width: 100%;
   margin: 0px;
   text-align: left;
+}
+
+@media screen and (max-width: 768px) {
+  .place__title {
+  font-size: 42px;
+  line-height: 110%;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .place__title {
+  font-size: 42px;
+  line-height: 110%;
+  padding: 0 16px;
+  }
 }
