--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,12 +8,42 @@
 
 .place {
   display: grid;
-  grid-template-columns: 460px 484px;
+  grid-template-columns: 44.5% 55%;
   grid-column-gap: 40px;
   grid-row-gap: 48px;
   margin: 0 auto;
+  width: 100%;
+  max-width: 944px;
 }
 
 .place:nth-child(n+2) {
   margin-top: 80px;
+}
+
+@media screen and (max-width: 1024px) {
+  .place {
+    grid-column-gap: 32px;
+    max-width: 896px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place {
+    grid-column-gap: 28px;
+    max-width: 692px;
+  }
+  .place:nth-child(n+2) {
+    margin-top: 72px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .place {
+    grid-template-columns: 100%;
+    max-width: 320px;
+    grid-row-gap: 32px;
+  }
+  .place:nth-child(n+2) {
+    margin-top: 48px;
+  }
 }
