--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,29 @@
 .places {
   max-width: 984px;
   width: 100%;
-  margin: 92px auto 0;
+  margin: 0 auto;
+  padding: 0 0 92px 0;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 1024px) {
+  .places {
+  padding: 0 48px 92px 48px;
+  max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places {
+  padding: 0 24px 88px 24px;
+  max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .places {
+  /*padding: 0 16px 64px 16px;*/
+  padding: 0 0 64px 0;
+  max-width: 320px;
+  }
 }
