--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,7 @@
-@import url('__background/cover__background.css');
-@import url('__subtitle/cover__subtitle.css');
-@import url('__title/cover__title.css');
+@import url('./__background/cover__background.css');
+@import url('./__subtitle/cover__subtitle.css');
+@import url('./__title/cover__title.css');
+@import url('./__link/cover__link.css');
 
 .cover {
   max-width: 1184px;
@@ -8,7 +9,6 @@
   margin: 0 auto;
   overflow: hidden;
 }
-
 
 @media screen and (max-width: 1024px) {
   .cover__background {
