Fixed after 1st review

--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,9 +1,9 @@
 .cover__background {
-  background-image: linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover__background.png);
-  background-image: -webkit-linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover__background.png);
-	background-image: -moz-linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover__background.png);
-	background-image: -o-linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover__background.png);
-	background-image: -ms-linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover__background.png);
+  background-image: linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover-trains.jpg);
+  background-image: -webkit-linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover-trains.jpg);
+	background-image: -moz-linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover-trains.jpg);
+	background-image: -o-linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover-trains.jpg);
+	background-image: -ms-linear-gradient(rgba(42,44,47,0.3),rgba(42,44,47,0.3)), url(../../../images/cover-trains.jpg);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,18 +13,39 @@
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
 }
 
-.cover__background:hover {
-  background-image: linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
-  background-image: -webkit-linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
-  background-image: -moz-linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
-  background-image: -o-linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
-  background-image: -ms-linear-gradient(rgba(42,44,47,0.8),rgba(42,44,47,0.8)), url(../../../images/cover__background.png);
+.cover__background:before {
+  content: " ";
+  background-color: rgb(42,44,47);
+  min-height: 740px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+  opacity: 0;
+  transition:  opacity 0.3s linear;
+  -webkit-transition: opacity 0.3s linear;
+  -moz-transition: opacity 0.3s linear;
+  -ms-transition: opacity 0.3s linear;
+  -o-transition: opacity 0.3s linear;
+}
+
+.cover__background:hover:before {
+  opacity: 1;
+  background-color: rgb(42,44,47, 0.8);
 }
 
 @media screen and (max-width: 1024px) {
   .cover__background {
+  min-height: 640px;
+  }
+
+  .cover__background:before {
   min-height: 640px;
   }
 }
@@ -33,16 +54,28 @@
   .cover__background {
   min-height: 480px;
   }
+
+  .cover__background:before {
+  min-height: 480px;
+  }
 }
 
 @media screen and (max-width: 375px) {
   .cover__background {
   min-height: 300px;
   }
+
+  .cover__background:before {
+  min-height: 300px;
+  }
 }
 
 @media screen and (max-width: 375px) {
   .cover__background {
+  min-height: 200px;
+  }
+
+  .cover__background:before {
   min-height: 200px;
   }
 }
