--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -18,14 +18,15 @@
 @media screen and (max-width: 1024px) {
   .footer {
     max-width: 928px;
-    padding: 92px 48px 24px 48px;
+    padding: 92px 0 24px 0;
+    justify-content: space-around;
   }
 }
 
 @media screen and (max-width: 768px) {
   .footer {
     max-width: 720px;
-    padding: 90px 24px 24px 24px;
+    padding: 90px 0 24px 0;
   }
 }
 
@@ -36,10 +37,16 @@
   }
 }
 
+@media screen and (max-width: 480px) {
+  .footer {
+    padding: 92px 24px 24px 24px;
+  }
+}
+
 @media screen and (max-width: 375px) {
   .footer {
     max-width: 186px;
     padding: 64px 0 24px 16px;
-    display: block;
+    margin: 0;
   }
 }
