--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,4 @@
 .lead__title {
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
   font-size: 96px;
@@ -14,6 +13,19 @@
 @media screen and (max-width: 768px) {
   .lead__title {
   padding: 0 24px 0 24px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .lead__title {
+    font-size: 72px;
+    line-height: 104%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .lead__title {
+    font-size: 56px;
   }
 }
 
