--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,4 @@
 .cover__subtitle {
-  font-family: 'Inter';
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -8,6 +7,7 @@
   color: white;
   margin: 32px auto 0 auto;
   max-width: 360px;
+  z-index: 5;
 }
 
 @media screen and (max-width: 375px) {
