--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,7 +7,7 @@
   max-width: 1184px;
   width: 100%;
   margin: 0 auto;
-  overflow: hidden;
+  position: relative;
 }
 
 @media screen and (max-width: 1024px) {
