--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,11 +1,11 @@
 .footer__link {
-  font-family: 'Inter';
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 112%;
   color: white;
   text-decoration: none;
+  transition: opacity 0.2s linear;
 }
 .footer__link:hover {
   opacity: 0.8;
