--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -4,4 +4,13 @@
   margin: 0;
   padding: 0;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 375px) {
+  .footer__links {
+    flex-direction: column;
+    text-align: left;
+  }
 }
