--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,9 +1,16 @@
 .header__lang-links {
-  padding-top: 18px;
+  padding: 18px 48px 0 0;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px) {
   .header__lang-links {
-    padding-top: 18px;
+    padding-right: 24px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .header__lang-links {
+    padding-right: 0;
   }
 }
