--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,11 +1,21 @@
 .header__logo {
-  min-width: 176px;
-  min-height: 52px;
+  max-width: 176px;
+  width: 100%;
+  height: auto;
+  padding-left: 48px;
+}
+
+@media screen and (max-width: 768px) {
+  .header__logo {
+    padding-left: 24px;
+    box-sizing: border-box;
+  }
 }
 
 @media screen and (max-width: 375px) {
   .header__logo {
-    min-width: 142px;
-    min-height: 42px;
+    max-width: 142px;
+    height: auto;
+    padding-left: 0;
   }
 }
