--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,11 +1,17 @@
 .intro__title {
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
   line-height: 107%;
   color: white;
   margin: 0;
+}
+
+@media screen and (max-width: 640px) {
+  .intro__title {
+    font-size: 46px;
+    line-height: 109%;
+  }
 }
 
 @media screen and (max-width: 375px) {
