--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -8,19 +8,25 @@
   width: 100%;
   margin: 0;
   padding: 0 0 92px 148px;
-  box-sizing: border-box;
+}
+
+@media screen and (max-width: 1180px) {
+  .intro {
+    box-sizing: border-box;
+    padding: 0 0 92px 100px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
   .intro {
     max-width: 720px;
     padding: 0 0 92px 48px;
+    box-sizing: border-box;
   }
 }
 
 @media screen and (max-width: 768px) {
   .intro {
-    max-width: 720px;
     padding: 0 24px 88px 24px;
   }
 }
@@ -28,7 +34,8 @@
 @media screen and (max-width: 320px) {
   .intro {
     max-width: 288px;
-    padding: 0 16px 64px 16px;
+    padding: 0 0 64px 16px;
+    box-sizing: content-box;
   }
 }
 
