--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,8 @@
 .page {
     background-color: #2A2C2F;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     max-width: 1280px;
+    min-width: 320px;
     width: 100%;
     margin: 0 auto;
     word-wrap: break-word;
@@ -16,27 +17,17 @@
 @media screen and (max-width: 1024px) {
   .page {
   max-width: 1024px;
-  width: 100%;
   }
 }
 
 @media screen and (max-width: 768px) {
   .page {
   max-width: 768px;
-  width: 100%;
   }
 }
 
 @media screen and (max-width: 375px) {
   .page {
   max-width: 375px;
-  width: 100%;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .page {
-  max-width: 320px;
-  width: 100%;
   }
 }
