--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,4 @@
 .place__title {
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
@@ -13,13 +12,20 @@
   .place__title {
   font-size: 42px;
   line-height: 110%;
+  align-self: end;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .place__title {
+    font-size: 36px;
+    padding: 0 16px;
   }
 }
 
 @media screen and (max-width: 375px) {
   .place__title {
-  font-size: 42px;
-  line-height: 110%;
-  padding: 0 16px;
+  font-size: 32px;
+  line-height: 109%;
   }
 }
