--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,6 +2,12 @@
   align-self: end;
 }
 
+@media screen and (max-width: 640px) {
+  .place__website {
+   padding-left: 16px;
+  }
+}
+
 @media screen and (max-width: 375px) {
   .place__website {
     display: none;
