--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,12 +8,13 @@
 
 .place {
   display: grid;
-  grid-template-columns: 44.5% 55%;
+  grid-template-columns: 43% 50%;
   grid-column-gap: 40px;
   grid-row-gap: 48px;
   margin: 0 auto;
   width: 100%;
   max-width: 944px;
+  justify-content: center;
 }
 
 .place:nth-child(n+2) {
@@ -23,19 +24,38 @@
 @media screen and (max-width: 1024px) {
   .place {
     grid-column-gap: 32px;
-    max-width: 896px;
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .place {
     grid-column-gap: 28px;
-    max-width: 692px;
+    max-width: 720px;
   }
   .place:nth-child(n+2) {
     margin-top: 72px;
   }
 }
+
+@media screen and (max-width: 640px) {
+  .place {
+    max-width: 560px;
+    grid-template-columns: 100%;
+  }
+  .place:nth-child(n+2) {
+    margin-top: 65px;
+  }
+}
+
+/*@media screen and (max-width: 480px) {
+  .place {
+    max-width: 420px;
+  }
+  .place:nth-child(n+2) {
+    margin-top: 58px;
+  }
+}*/
 
 @media screen and (max-width: 375px) {
   .place {
