Fixed after 2nd review

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -9,29 +9,28 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
-  max-width: 1184px;
-  margin: 0 auto;
-  padding: 92px 0px 24px 0px;
+  max-width: 1280px;
+  margin: 0;
+  padding: 92px 48px 24px 48px;
   box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px) {
   .footer {
-    max-width: 928px;
-    padding: 92px 0 24px 0;
-    justify-content: space-around;
+    max-width: 1024px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .footer {
-    max-width: 720px;
-    padding: 90px 0 24px 0;
+    max-width: 768px;
+    padding: 90px 24px 24px 24px;
   }
 }
 
-@media screen and (max-width: 705px) {
+@media screen and (max-width: 724px) {
   .footer {
+    max-width: 724px;
     justify-content: center;
     align-items: center;
   }
@@ -39,14 +38,16 @@
 
 @media screen and (max-width: 480px) {
   .footer {
+    max-width: 480px;
     padding: 92px 24px 24px 24px;
   }
 }
 
 @media screen and (max-width: 375px) {
   .footer {
-    max-width: 186px;
+    max-width: 304px;
     padding: 64px 0 24px 16px;
-    margin: 0;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
 }
