--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,16 +1,10 @@
 .header__lang-links {
-  padding: 18px 48px 0 0;
+  padding: 18px 0 0 0;
   box-sizing: border-box;
-}
-
-@media screen and (max-width: 768px) {
-  .header__lang-links {
-    padding-right: 24px;
-  }
 }
 
 @media screen and (max-width: 375px) {
   .header__lang-links {
-    padding-right: 0;
+    padding: 14px 0 0 0;
   }
 }
