--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,30 +7,38 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  max-width: 1184px;
-  margin: 0 auto;
+  margin: 0;
   width: 100%;
-  padding: 28px 0 56px 0;
+  max-width: 1280px;
+  padding: 28px 48px 56px 48px;
   box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px) {
   .header {
-    max-width: 928px;
-    padding: 28px 0 48px 0;
+    max-width: 1024px;
+    padding: 28px 48px 48px 48px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .header {
-    max-width: 720px;
+    max-width: 768px;
+    padding: 28px 24px 48px 24px;
   }
 }
 
 @media screen and (max-width: 375px) {
   .header {
-    max-width: 288px;
-    padding: 16px 0 48px 0;
+    max-width: 375px;
+    padding: 16px 24px 48px 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    padding: 16px 16px 48px 16px;
+    max-width: 320px;
   }
 }
 
